--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
     <section>
         <h2>📊 Değişkenlerin Yıllara Göre Etkisi</h2>
         <p>Bu grafik, mutluluk skorunu etkileyen faktörlerin yıllara göre değişimini göstermektedir.</p>
-        <img src="figures/degisken_etkileri_yillar.png" alt="Değişken Etkileri Yıllar">
+        <img src="degisken_etkileri_yillar.png" alt="Değişken Etkileri Yıllar">
     </section>
 
     <section>
         <h2>😊 Mutluluk Etiket Dağılımı</h2>
         <p>Mutluluk skorlarının etiketlere göre dağılımı aşağıdaki grafikte gösterilmektedir.</p>
-        <img src="figures/mutluluk_etiket_dagilimi.png" alt="Mutluluk Etiket Dağılımı">
+        <img src="mutluluk_etiket_dagilimi.png" alt="Mutluluk Etiket Dağılımı">
     </section>
 
     <section>
-        <h2>🔍 Tahmin vs Gerçek (2018)</h2>
+        <h2>🔍 Tahmn vs Gerçek (2018)</h2>
         <p>2018 yılı için modelin tahmin ettiği mutluluk skorları ile gerçek skorların karşılaştırması.</p>
-        <img src="figures/tahmin_vs_gercek_2018.png" alt="Tahmin vs Gerçek 2018">
+        <img src="tahmin_vs_gercek_2018.png" alt="Tahmin vs Gerçek 2018">
     </section>
 
     <section>
         <h2>🔍 Tahmin vs Gerçek (2019)</h2>
         <p>2019 yılı için modelin tahmin ettiği mutluluk skorları ile gerçek skorların karşılaştırması.</p>
-        <img src="figures/tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
+        <img src="tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
     </section>
 </main>
 
