--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
         <img src="tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
     </section>
 </main>
+</p>The Goal of My Project
+In this project, I worked with the 2018 and 2019 World Happiness datasets.
+My aim was to analyze the internal structure of each year’s data and explore the differences and changes between them over time.
+The dependent variable in my study is the Happiness Score.
+The independent variables are:
+- GDP per capita
+- Social support
+- Healthy life expectancy
+- Freedom to make life choices
+- Generosity
+- Perceptions of corruption
+I built a modular analytical framework to conduct the analysis and tested several regression models:
+- Ordinary Least Squares (OLS)
+- Robust OLS
+- Log OLS
+- Weighted Least Squares (WLS)
+The goal was to identify the best-fitting model for each year’s dataset.
+For model evaluation, I used the following criteria:
+- Akaike Information Criterion (AIC)
+- Bayesian Information Criterion (BIC)
+- R-squared (R²)
+- Correlation with the dependent variable
+Outcome:
+- For the 2018 dataset, the OLS model provided the best performance.
+- For the 2019 dataset, the Robust OLS model was the best fit.
+This choice was based on statistical performance metrics and alignment with the data’s characteristics.
+The analysis framework was designed to be modular so that it can be easily adapted for other datasets or extended with additional statistical methods. The focus was not only on identifying the most suitable model but also on building a reusable, well-documented, and organized workflow.
+
+You can take more information in there----> https://github.com/ada621/World_Happiness_Analysis/tree/main 
+    and turkish version---> https://github.com/ada621/World_Happiness_Analysis/tree/main
 
 <footer>
     © 2025 World Happiness Analysis – GitHub Pages Sunumu
