--- a/index.html
+++ b/index.html
@@ -119,30 +119,60 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
         <p>2019 yılı için modelin tahmin ettiği mutluluk skorları ile gerçek skorların karşılaştırması.</p>
         <img src="tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
     </section>
-<section>
-    <h2>🎯 The Goal of My Project</h2>
-    <p>In this project, I worked with the 2018 and 2019 World Happiness datasets. My aim was to analyze the internal structure of each year’s data and explore the differences and changes between them over time.</p>
-    <p>The dependent variable in my study is the <strong>Happiness Score</strong>. The independent variables are:</p>
-    <ul>
-        <li>GDP per capita</li>
-        <li>Social support</li>
-        <li>Healthy life expectancy</li>
-        <li>Freedom to make life choices</li>
-        <li>Generosity</li>
-        <li>Perceptions of corruption</li>
+<section style="background: linear-gradient(135deg, #ffffff, #f8f9fc); padding: 25px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); margin-bottom: 30px;">
+    <h2 style="display: flex; align-items: center; font-size: 1.8rem; color: #444;">
+        🎯 <span style="margin-left: 10px;">The Goal of My Project</span>
+    </h2>
+    <p style="font-size: 1.05rem; line-height: 1.6; color: #555;">
+        In this project, I worked with the <strong>2018</strong> and <strong>2019</strong> World Happiness datasets. 
+        My aim was to analyze the internal structure of each year’s data and explore the differences and changes between them over time.
+    </p>
+
+    <div style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
+        <!-- Variables List -->
+        <div style="flex: 1; min-width: 250px;">
+            <h3 style="color: #667eea;">📌 Variables</h3>
+            <ul style="list-style: none; padding-left: 0; line-height: 1.8;">
+                <li>💰 GDP per capita</li>
+                <li>🤝 Social support</li>
+                <li>🏥 Healthy life expectancy</li>
+                <li>🗽 Freedom to make life choices</li>
+                <li>💝 Generosity</li>
+                <li>⚖️ Perceptions of corruption</li>
+            </ul>
+        </div>
+
+        <!-- Models List -->
+        <div style="flex: 1; min-width: 250px;">
+            <h3 style="color: #667eea;">🧮 Models Tested</h3>
+            <ul style="list-style: none; padding-left: 0; line-height: 1.8;">
+                <li>OLS (Ordinary Least Squares)</li>
+                <li>Robust OLS</li>
+                <li>Log OLS</li>
+                <li>WLS (Weighted Least Squares)</li>
+            </ul>
+        </div>
+    </div>
+
+    <h3 style="color: #667eea; margin-top: 20px;">📊 Evaluation Criteria</h3>
+    <ul style="list-style: none; padding-left: 0; line-height: 1.8;">
+        <li>📐 AIC</li>
+        <li>📏 BIC</li>
+        <li>📊 R-squared (R²)</li>
+        <li>🔗 Correlation with Happiness Score</li>
     </ul>
-    <p>I built a modular analytical framework to conduct the analysis and tested several regression models:</p>
-    <ul>
-        <li>Ordinary Least Squares (OLS)</li>
-        <li>Robust OLS</li>
-        <li>Log OLS</li>
-        <li>Weighted Least Squares (WLS)</li>
+
+    <h3 style="color: #667eea; margin-top: 20px;">🏆 Outcomes</h3>
+    <ul style="list-style: none; padding-left: 0; line-height: 1.8;">
+        <li>2018 → <strong>OLS model</strong> performed best</li>
+        <li>2019 → <strong>Robust OLS model</strong> performed best</li>
     </ul>
-    <p>For model evaluation, I used AIC, BIC, R², and correlation with the dependent variable as criteria. As a result:</p>
-    <ul>
-        <li><strong>2018:</strong> OLS model performed best</li>
-        <li><strong>2019:</strong> Robust OLS model performed best</li>
-    </ul>
-    <p>This framework was designed to be modular, reusable, and well-documented so that it can be applied to other datasets or extended with additional statistical methods.</p>
-    <p>More information: <a href="https://github.com/ada621/World_Happiness_Analysis/tree/main" target="_blank">Project Repository</a></p>
+
+    <p style="margin-top: 15px; font-size: 1rem; line-height: 1.6; color: #555;">
+        This framework was designed to be <strong>modular, reusable, and well-documented</strong>, making it adaptable for other datasets or extended with additional statistical methods.
+    </p>
+
+    <p style="margin-top: 10px; font-size: 0.95rem; color: #666;">
+        🔗 More details: <a href="https://github.com/ada621/World_Happiness_Analysis/tree/main" target="_blank" style="color: #667eea; text-decoration: none;">Project Repository</a>
+    </p>
 </section>
