--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>📊 Değişkenlerin Yıllara Göre Etkisi</h2>
         <p>Bu grafik, mutluluk skorunu etkileyen faktörlerin yıllara göre değişimini göstermektedir.</p>
         <img src="degisken_etkileri_yillar.png" alt="Değişken Etkileri Yıllar">
-        <p>Looking at the variable effects chart, we see that in 2019 the effects of social support, freedom to make life choices, healthy life 
+        <p>📢Looking at the variable effects chart, we see that in 2019 the effects of social support, freedom to make life choices, healthy life 
 expectancy, and perception of corruption increased, while the effects of GDP per capita and generosity decreased.These changes are
 generally around ±0.2. However,since the effects of perception of corruption and generosity are quite weak, we can mostly talk about
 their indirect influence rather than a direct one.
@@ -91,7 +91,7 @@ scope of support and impact on individuals can differ significantly.
         <h2>😊 Mutluluk Etiket Dağılımı</h2>
         <p>Mutluluk skorlarının etiketlere göre dağılımı aşağıdaki grafikte gösterilmektedir.</p>
         <img src="mutluluk_etiket_dagilimi.png" alt="Mutluluk Etiket Dağılımı">
-        <p>In the happiness label distribution bar chart, the “above average” label increased in 2019 compared to 2018. The “average” and “low”
+        <p>📢In the happiness label distribution bar chart, the “above average” label increased in 2019 compared to 2018. The “average” and “low”
 labels slightly decreased in 2019, while the “very low” label showed a small increase. For the “high” label, we don’t see any change.
 
 From this, we can say that in 2019 the labels shifted more toward the extremes. As the “average” label decreased, the “above average”
@@ -160,6 +160,9 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
         <li>📏 BIC</li>
         <li>📊 R-squared (R²)</li>
         <li>🔗 Correlation with Happiness Score</li>
+        <li>🔍Regression Assumptions</li>
+        <li>📈Confidence Intervals</li>
+        <li>💡Model Comparison</li>
     </ul>
 
     <h3 style="color: #667eea; margin-top: 20px;">🏆 Outcomes</h3>
@@ -173,6 +176,6 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
     </p>
 
     <p style="margin-top: 10px; font-size: 0.95rem; color: #666;">
-        🔗 More details: <a href="https://github.com/ada621/World_Happiness_Analysis/tree/main" target="_blank" style="color: #667eea; text-decoration: none;">Project Repository</a>
+        ‼️💡 More details: <a href="https://github.com/ada621/World_Happiness_Analysis/tree/main" target="_blank" style="color: #667eea; text-decoration: none;">Project Repository</a>
     </p>
 </section>
