--- a/index.html
+++ b/index.html
@@ -112,12 +112,19 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
         <h2>🔍 Tahmn vs Gerçek (2018)</h2>
         <p>2018 yılı için modelin tahmin ettiği mutluluk skorları ile gerçek skorların karşılaştırması.</p>
         <img src="tahmin_vs_gercek_2018.png" alt="Tahmin vs Gerçek 2018">
+        <p>📢In the 2018 dataset, the OLS model produced predictions very close to the actual values for most countries, with the majority 
+of points lying near the 45° reference line—indicating a strong overall fit. However, there is a slight underestimation tendency
+for high happiness scores and some overestimation for lower scores, suggesting that the model’s performance at extreme values is slightly
+weaker compared to mid-range values.
     </section>
 
     <section>
         <h2>🔍 Tahmin vs Gerçek (2019)</h2>
         <p>2019 yılı için modelin tahmin ettiği mutluluk skorları ile gerçek skorların karşılaştırması.</p>
         <img src="tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
+        <p>📢In the 2019 dataset, the Robust OLS model produced predictions close to the actual values ​​for most countries, with points clustering
+near the 45° line. Slight underestimation appears at higher scores, while some overestimation occurs at lower scores, indicating slightly weaker
+performance at extreme values.
     </section>
 <section style="background: linear-gradient(135deg, #ffffff, #f8f9fc); padding: 25px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); margin-bottom: 30px;">
     <h2 style="display: flex; align-items: center; font-size: 1.8rem; color: #444;">
@@ -126,6 +133,9 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
     <p style="font-size: 1.05rem; line-height: 1.6; color: #555;">
         In this project, I worked with the <strong>2018</strong> and <strong>2019</strong> World Happiness datasets. 
         My aim was to analyze the internal structure of each year’s data and explore the differences and changes between them over time.
+        ➕In addition to obtaining prediction results, I sought to perform a comprehensive statistical analysis that included evaluating
+        the model, testing regression assumptions, and comparing coefficients to gain deeper insights into the data.
+
     </p>
 
     <div style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
