--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         <p>📢Looking at the variable effects chart, we see that in 2019 the effects of social support, freedom to make life choices, healthy life 
 expectancy, and perception of corruption increased, while the effects of GDP per capita and generosity decreased.These changes are
 generally around ±0.2. However,since the effects of perception of corruption and generosity are quite weak, we can mostly talk about
-their indirect influence rather than a direct one.
+their indirect influence rather than a direct one.</p>
 
-From these results, it can be said that freedom to make life choices has a very important and key role in happiness scores. At the same 
+<p>From these results, it can be said that freedom to make life choices has a very important and key role in happiness scores. At the same 
 time, social support—reflecting interpersonal relationships—and factors with roughly the same level of influence, such as income
-distribution (GDP per capita)and healthy life expectancy, are among the most influential and should be considered carefully.
+distribution (GDPper capita) and healthy life expectancy, are among the most influential and should be considered carefully.</p>
 
-Both generosity and social support relate to social relationships, but the weak effect of generosity can be explained in a few ways:
+<p>Both generosity and social support relate to social relationships, but the weak effect of generosity can be explained in a few ways:
 Generosity mainly refers to helping others, while social support is more about receiving help—support that people get during difficult
-times or when in need.
+times or when in need.</p>
 
-Another important difference is that generosity is often limited to our close social circle, whereas social support can come both 
+<p>Another important difference is that generosity is often limited to our close social circle, whereas social support can come both 
 from personal networks like family and friends and from more structured sources such as institutions or organizations.Therefore, the 
-scope of support and impact on individuals can differ significantly.
+scope of support and impact on individuals can differ significantly.</p>
     </section>
 
     <section>
@@ -92,9 +92,9 @@ scope of support and impact on individuals can differ significantly.
         <p>Mutluluk skorlarının etiketlere göre dağılımı aşağıdaki grafikte gösterilmektedir.</p>
         <img src="mutluluk_etiket_dagilimi.png" alt="Mutluluk Etiket Dağılımı">
         <p>📢In the happiness label distribution bar chart, the “above average” label increased in 2019 compared to 2018. The “average” and “low”
-labels slightly decreased in 2019, while the “very low” label showed a small increase. For the “high” label, we don’t see any change.
+labels slightly decreased in 2019, while the “very low” label showed a small increase. For the “high” label, we don’t see any change.</p>
 
-From this, we can say that in 2019 the labels shifted more toward the extremes. As the “average” label decreased, the “above average”
+<p>From this, we can say that in 2019 the labels shifted more toward the extremes. As the “average” label decreased, the “above average”
 and “very low” labels increased. However, the fact that the “high” label didn’t change suggests that this shift wasn’t very strong.
 There could be a few reasons for this shift--->
 We previously found that GDP per capita had a stronger positive effect on the happiness score in 2018.The decrease in GDP per capita’s
@@ -104,8 +104,7 @@ for example:
 The “freedom to make life choices” variable is the most influential variable.However,when we compare the United Kingdom’s 2018 and 
 2019 data, we see that the freedom to make life choice variable decreased in 2019, while GDP per capita, social support, and healthy 
 life expectancy scores increased. This could explain the difference in 2018 labels and why the 2019 label didn’t change.
-Perhaps the increase in freedom to make a life choice balance out the decreases in the other variables.
-
+Perhaps the increase in freedom to make a life choice balance out the decreases in the other variables.</p>
     </section>
 
     <section>
@@ -115,7 +114,7 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
         <p>📢In the 2018 dataset, the OLS model produced predictions very close to the actual values for most countries, with the majority 
 of points lying near the 45° reference line—indicating a strong overall fit. However, there is a slight underestimation tendency
 for high happiness scores and some overestimation for lower scores, suggesting that the model’s performance at extreme values is slightly
-weaker compared to mid-range values.
+weaker compared to mid-range values.</p>
     </section>
 
     <section>
@@ -124,13 +123,13 @@ weaker compared to mid-range values.
         <img src="tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
         <p>📢In the 2019 dataset, the Robust OLS model produced predictions close to the actual values ​​for most countries, with points clustering
 near the 45° line. Slight underestimation appears at higher scores, while some overestimation occurs at lower scores, indicating slightly weaker
-performance at extreme values.
+performance at extreme values.</p>
     </section>
 <section style="background: linear-gradient(135deg, #ffffff, #f8f9fc); padding: 25px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); margin-bottom: 30px;">
     <h2 style="display: flex; align-items: center; font-size: 1.8rem; color: #444;">
         🎯 <span style="margin-left: 10px;">The Goal of My Project</span>
     </h2>
-    <p style="font-size: 1.05rem; line-height: 1.6; color: #555;">
+    <p>style="font-size: 1.05rem; line-height: 1.6; color: #555;">
         In this project, I worked with the <strong>2018</strong> and <strong>2019</strong> World Happiness datasets. 
         My aim was to analyze the internal structure of each year’s data and explore the differences and changes between them over time.
         ➕In addition to obtaining prediction results, I sought to perform a comprehensive statistical analysis that included evaluating
