--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 
 <header>
     <h1>🌍 World Happiness Analysis</h1>
-    <p>Dünya Mutluluk Verilerinin Analizi ve Görselleştirilmesi</p>
+    <p>Analysis and Visualization of World Happiness Data</p>
 </header>
 
 <main>
     <section>
-        <h2>📊 Değişkenlerin Yıllara Göre Etkisi</h2>
-        <p>Bu grafik, mutluluk skorunu etkileyen faktörlerin yıllara göre değişimini göstermektedir.</p>
+        <h2>📊Effect of Variables by Year</h2>
+        <p>This graph shows the change in factors affecting happiness scores over the years..</p>
         <img src="degisken_etkileri_yillar.png" alt="Değişken Etkileri Yıllar">
         <p>📢Looking at the variable effects chart, we see that in 2019 the effects of social support, freedom to make life choices, healthy life 
 expectancy, and perception of corruption increased, while the effects of GDP per capita and generosity decreased.These changes are
@@ -88,8 +88,8 @@ scope of support and impact on individuals can differ significantly.</p>
     </section>
 
     <section>
-        <h2>😊 Mutluluk Etiket Dağılımı</h2>
-        <p>Mutluluk skorlarının etiketlere göre dağılımı aşağıdaki grafikte gösterilmektedir.</p>
+        <h2>😊Happiness Label Distribution</h2>
+        <p>The distribution of happiness scores by labels is shown in the graph below..</p>
         <img src="mutluluk_etiket_dagilimi.png" alt="Mutluluk Etiket Dağılımı">
         <p>📢In the happiness label distribution bar chart, the “above average” label increased in 2019 compared to 2018. The “average” and “low”
 labels slightly decreased in 2019, while the “very low” label showed a small increase. For the “high” label, we don’t see any change.</p>
@@ -108,8 +108,8 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
     </section>
 
     <section>
-        <h2>🔍 Tahmn vs Gerçek (2018)</h2>
-        <p>2018 yılı için modelin tahmin ettiği mutluluk skorları ile gerçek skorların karşılaştırması.</p>
+        <h2>🔍Actual Values ​​and Regression Predicted Values 2018</h2>
+        <p>Comparison of model-predicted happiness scores with actual scores for 2018.</p>
         <img src="tahmin_vs_gercek_2018.png" alt="Tahmin vs Gerçek 2018">
         <p>📢In the 2018 dataset, the OLS model produced predictions very close to the actual values for most countries, with the majority 
 of points lying near the 45° reference line—indicating a strong overall fit. However, there is a slight underestimation tendency
@@ -118,8 +118,8 @@ weaker compared to mid-range values.</p>
     </section>
 
     <section>
-        <h2>🔍 Tahmin vs Gerçek (2019)</h2>
-        <p>2019 yılı için modelin tahmin ettiği mutluluk skorları ile gerçek skorların karşılaştırması.</p>
+        <h2>🔍Actual Values ​​and Regression Predicted Values 2019</h2>
+        <p>Comparison of model-predicted happiness scores with actual scores for 2019.</p>
         <img src="tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
         <p>📢In the 2019 dataset, the Robust OLS model produced predictions close to the actual values ​​for most countries, with points clustering
 near the 45° line. Slight underestimation appears at higher scores, while some overestimation occurs at lower scores, indicating slightly weaker
