--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ performance at extreme values.</p>
     <h2 style="display: flex; align-items: center; font-size: 1.8rem; color: #444;">
         🎯 <span style="margin-left: 10px;">The Goal of My Project</span>
     </h2>
-    <p>style="font-size: 1.05rem; line-height: 1.6; color: #555;">
+    <p style="font-size: 1.05rem; line-height: 1.6; color: #555;">
         In this project, I worked with the <strong>2018</strong> and <strong>2019</strong> World Happiness datasets. 
         My aim was to analyze the internal structure of each year’s data and explore the differences and changes between them over time.
         ➕In addition to obtaining prediction results, I sought to perform a comprehensive statistical analysis that included evaluating
