--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ performance at extreme values.</p>
                 <li>Robust OLS</li>
                 <li>Log OLS</li>
                 <li>WLS (Weighted Least Squares)</li>
-                <li>GR Bosting</li>
+                <li>Gradient Boosting</li>
             </ul>
         </div>
     </div>
@@ -208,8 +208,8 @@ performance at extreme values.</p>
     <p>To complement statistical models, <strong>Gradient Boosting Regressor</strong> was tested for both years.</p>
     
     <ul>
-        <li><strong>2018:</strong> R² ≈ 0.607, lower than OLS (0.692), with slightly higher errors → data likely linear.</li>
-        <li><strong>2019:</strong> R² ≈ 0.579, slightly below Robust OLS (0.602) → small difference, but no gain without tuning.</li>
+        <li><strong>2018:</strong>Gradient Boosting R² ≈ 0.607, lower than OLS (0.692), with slightly higher errors → data likely linear.</li>
+        <li><strong>2019:</strong>Gradient Boosting R² ≈ 0.579, slightly below Robust OLS (0.602) → small difference, but no gain without tuning.</li>
     </ul>
     
     <p><strong>Interpretation:</strong> Classical regression models outperformed boosting in both years. 
