--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section>
         <h2>📊Effect of Variables by Year</h2>
         <p>This graph shows the change in factors affecting happiness scores over the years..</p>
-        <img src="degisken_etkileri_yillar.png" alt="Değişken Etkileri Yıllar">
+        <img src="figures/degisken_etkileri_yillar.png" alt="Değişken Etkileri Yıllar">
         <p>📢Looking at the variable effects chart, we see that in 2019 the effects of social support, freedom to make life choices, healthy life 
 expectancy, and perception of corruption increased, while the effects of GDP per capita and generosity decreased.These changes are
 generally around ±0.2. However,since the effects of perception of corruption and generosity are quite weak, we can mostly talk about
@@ -90,7 +90,7 @@ scope of support and impact on individuals can differ significantly.</p>
     <section>
         <h2>😊Happiness Label Distribution</h2>
         <p>The distribution of happiness scores by labels is shown in the graph below..</p>
-        <img src="mutluluk_etiket_dagilimi.png" alt="Mutluluk Etiket Dağılımı">
+        <img src="figures/mutluluk_etiket_dagilimi.png" alt="Mutluluk Etiket Dağılımı">
         <p>📢In the happiness label distribution bar chart, the “above average” label increased in 2019 compared to 2018. The “average” and “low”
 labels slightly decreased in 2019, while the “very low” label showed a small increase. For the “high” label, we don’t see any change.</p>
 
@@ -110,7 +110,7 @@ Perhaps the increase in freedom to make a life choice balance out the decreases 
     <section>
         <h2>🔍Actual Values ​​and Regression Predicted Values 2018</h2>
         <p>Comparison of model-predicted happiness scores with actual scores for 2018.</p>
-        <img src="tahmin_vs_gercek_2018.png" alt="Tahmin vs Gerçek 2018">
+        <img src="figures/tahmin_vs_gercek_2018.png" alt="Tahmin vs Gerçek 2018">
         <p>📢In the 2018 dataset, the OLS model produced predictions very close to the actual values for most countries, with the majority 
 of points lying near the 45° reference line—indicating a strong overall fit. However, there is a slight underestimation tendency
 for high happiness scores and some overestimation for lower scores, suggesting that the model’s performance at extreme values is slightly
@@ -120,7 +120,7 @@ weaker compared to mid-range values.</p>
     <section>
         <h2>🔍Actual Values ​​and Regression Predicted Values 2019</h2>
         <p>Comparison of model-predicted happiness scores with actual scores for 2019.</p>
-        <img src="tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
+        <img src="figures/tahmin_vs_gercek_2019.png" alt="Tahmin vs Gerçek 2019">
         <p>📢In the 2019 dataset, the Robust OLS model produced predictions close to the actual values ​​for most countries, with points clustering
 near the 45° line. Slight underestimation appears at higher scores, while some overestimation occurs at lower scores, indicating slightly weaker
 performance at extreme values.</p>
@@ -223,11 +223,11 @@ performance at extreme values.</p>
     </ul>
     
     <h3>📊 Performance Table</h3>
-    <img src="model_comparison_table.png" alt="Model Comparison Table">
+    <img src="figures/model_comparison_table.png" alt="Model Comparison Table">
     
     <h3>📊 Visual Comparisons</h3>
     <p>You can view the model R², error metrics, and residual distributions in the following charts:</p>
-    <img src="bar_chart.png" alt="R2 Comparison">
-    <img src="residual.png" alt="Residual Boxplot">
-    <img src="predicted_vs_actual.png" alt="Predicted vs Actual">
+    <img src="figures/bar_chart.png" alt="R2 Comparison">
+    <img src="figures/residual.png" alt="Residual Boxplot">
+    <img src="figures/predicted_vs_actual.png" alt="Predicted vs Actual">
 </section>
