--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <img src="figures/model_comparison_table.png" alt="Model Comparison Table">
         
         <h3>📊 Visual Comparisons</h3>
-        <p>You can view the model R², error metrics, and residual distributions in the following charts:</p>
+        <p>You can view the model predicted happiness scores with actual scores distribution in the following chart:</p>
         <img src="figures/predicted_vs_actual.png" alt="Predicted vs Actual">
     </section>
 </main>
