--- a/index.html
+++ b/index.html
@@ -70,10 +70,15 @@
             🎯 <span style="margin-left: 10px;">The Goal of My Project</span>
         </h2>
         <p style="font-size: 1.05rem; line-height: 1.6; color: #555;">
-            In this project, I worked with the <strong>2018</strong> and <strong>2019</strong> World Happiness datasets. 
-            My aim was to analyze the internal structure of each year's data and explore the differences and changes between them over time.
-            ➕In addition to obtaining prediction results, I sought to perform a comprehensive statistical analysis that included evaluating
-            the model, testing regression assumptions, and comparing coefficients to gain deeper insights into the data.
+            In this project, I worked with the 2018 and 2019 World Happiness datasets.
+            My aim was to analyze the internal structure of each year’s data and explore the differences
+            and changes between them over time.
+
+➕ In addition to obtaining prediction results, I performed a comprehensive statistical analysis that included evaluating the model, testing regression
+    assumptions, and comparing coefficients to gain deeper insights into the data.
+
+🎯 Beyond the technical aspect, my goal was also to strengthen my statistical analysis skills while leveraging my psychology background to interpret the 
+    findings within a broader psychological and sociological context.
         </p>
 
         <div style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
@@ -130,7 +135,7 @@
 
     <section>
         <h2>📊Effect of Variables by Year</h2>
-        <p>This graph shows the change in factors affecting happiness scores over the years..</p>
+        <p>This graph shows how the factors affecting happiness scores changed between 2018 and 2019.</p>
         <img src="figures/degisken_etkileri_yillar.png" alt="Değişken Etkileri Yıllar">
         <p>📢Looking at the variable effects chart, we see that in 2019 the effects of social support, freedom to make life choices, healthy life 
         expectancy, and perception of corruption increased, while the effects of GDP per capita and generosity decreased.These changes are
@@ -223,6 +228,7 @@
         <h2>📊 Performance Metrics & Visual Comparisons</h2>
         
         <h3>📊 Performance Table</h3>
+        <p>This graph displays the comparison of the results from the model selection process.</p>
         <img src="figures/model_comparison_table.png" alt="Model Comparison Table">
         <p>📢This graph clearly supports the model selection rationale discussed above. In both 2018 and 2019, OLS, Robust OLS, and WLS produce identical 
             results, while GB shows a weaker fit to the dataset.
