--- a/index.html
+++ b/index.html
@@ -203,6 +203,36 @@
     <h3>🏆 Final Selection</h3>
     <p><strong>2018 → OLS | 2019 → Robust OLS</strong></p>
 </section>
+    <p> <strong>2018 Regression Prediction</strong>
+Overall, when comparing the original happiness scores with the predicted new happiness scores from the regression model, we observe that even in countries 
+        with the highest initial scores, the predicted scores decrease, and in some cases, the happiness label changes.
+For example:
+- United Kingdom — (Happiness Score = 7.190, Happiness Label = High) → (New Happiness Score = 6.290, New Happiness Label = Above Average)
+- Costa Rica — (Happiness Score = 7.072, Happiness Label = High) → (New Happiness Score = 6.210, New Happiness Label = Above Average)
+However, in some countries the opposite occurs — both the happiness score and the happiness label increase:
+- Qatar — (Happiness Score = 6.374, Happiness Label = Above Average) → (New Happiness Score = 6.660, New Happiness Label = High)
+- Singapore — (Happiness Score = 6.343, Happiness Label = Above Average) → (New Happiness Score = 7.080, New Happiness Label = High)
+These results suggest:
+- Low scores (e.g., 3.49, 3.93) likely indicate countries with lower economic prosperity, freedom levels, or social support.
+- High scores (e.g., 6.97, 6.71) suggest higher life satisfaction among citizens.
+- GDP per capita is expected to be higher up to a certain point, but given its relatively small effect on the dependent variable, we would not expect a 
+        major gap in GDP per capita between low‑ and high‑scoring countries.
+- Freedom to make life choices is expected to be significantly higher in countries with high scores, as this is the most influential variable on happiness 
+        score.
+According to the model’s results, some countries’ happiness levels are lower than expected, potentially due to structural inequalities or lack of social
+        support.
+Predicted scores above 6 reflect the positive effects of strong economic indicators and social well‑being.
+When considered alongside the RMSE value, prediction errors are not large, indicating the model captures the general trend accurately.
+
+<strong>2019 Regression Prediction</strong>
+A similar trend to 2018 is observed — overall, scores have generally decreased. However, the changes are not always the same.
+For example:
+- United Kingdom — In 2018, the regression analysis result downgraded the label from High to Above Average, but in 2019, both the original happiness label
+        and the predicted new happiness label remained High.
+Happiness label changes do not occur in all cases, but in some countries, they do:
+- Costa Rica — As in 2018, the label dropped from High to Above Average in the regression results.
+- Qatar — As in 2018, the label increased from Above Average to High.
+</p>
    
 
     <section>
