--- a/index.html
+++ b/index.html
@@ -203,37 +203,62 @@
     <h3>🏆 Final Selection</h3>
     <p><strong>2018 → OLS | 2019 → Robust OLS</strong></p>
 </section>
-    <p> <strong>2018 Regression Prediction</strong>
-Overall, when comparing the original happiness scores with the predicted new happiness scores from the regression model, we observe that even in countries 
-        with the highest initial scores, the predicted scores decrease, and in some cases, the happiness label changes.
-For example:
-- United Kingdom — (Happiness Score = 7.190, Happiness Label = High) → (New Happiness Score = 6.290, New Happiness Label = Above Average)
-- Costa Rica — (Happiness Score = 7.072, Happiness Label = High) → (New Happiness Score = 6.210, New Happiness Label = Above Average)
-However, in some countries the opposite occurs — both the happiness score and the happiness label increase:
-- Qatar — (Happiness Score = 6.374, Happiness Label = Above Average) → (New Happiness Score = 6.660, New Happiness Label = High)
-- Singapore — (Happiness Score = 6.343, Happiness Label = Above Average) → (New Happiness Score = 7.080, New Happiness Label = High)
-These results suggest:
-- Low scores (e.g., 3.49, 3.93) likely indicate countries with lower economic prosperity, freedom levels, or social support.
-- High scores (e.g., 6.97, 6.71) suggest higher life satisfaction among citizens.
-- GDP per capita is expected to be higher up to a certain point, but given its relatively small effect on the dependent variable, we would not expect a 
-        major gap in GDP per capita between low‑ and high‑scoring countries.
-- Freedom to make life choices is expected to be significantly higher in countries with high scores, as this is the most influential variable on happiness 
-        score.
-According to the model’s results, some countries’ happiness levels are lower than expected, potentially due to structural inequalities or lack of social
-        support.
-Predicted scores above 6 reflect the positive effects of strong economic indicators and social well‑being.
-When considered alongside the RMSE value, prediction errors are not large, indicating the model captures the general trend accurately.
-
-<strong>2019 Regression Prediction</strong>
-A similar trend to 2018 is observed — overall, scores have generally decreased. However, the changes are not always the same.
-For example:
-- United Kingdom — In 2018, the regression analysis result downgraded the label from High to Above Average, but in 2019, both the original happiness label
-        and the predicted new happiness label remained High.
-Happiness label changes do not occur in all cases, but in some countries, they do:
-- Costa Rica — As in 2018, the label dropped from High to Above Average in the regression results.
-- Qatar — As in 2018, the label increased from Above Average to High.
+   <h3>📊 2018 Regression Prediction</h3>
+<p>
+    Overall, when comparing the original happiness scores with the predicted <em>new</em> happiness scores from the regression model, we observe that 
+    even in countries with the highest initial scores, the predicted scores decrease, and in some cases, the happiness label changes.
 </p>
-   
+
+<ul>
+    <li><strong>United Kingdom</strong> — (Happiness Score = 7.190, Label = High) → (New Score = 6.290, Label = Above Average)</li>
+    <li><strong>Costa Rica</strong> — (Happiness Score = 7.072, Label = High) → (New Score = 6.210, Label = Above Average)</li>
+</ul>
+
+<p>
+    However, in some countries, the opposite occurs — both the happiness score and the happiness label increase:
+</p>
+
+<ul>
+    <li><strong>Qatar</strong> — (Happiness Score = 6.374, Label = Above Average) → (New Score = 6.660, Label = High)</li>
+    <li><strong>Singapore</strong> — (Happiness Score = 6.343, Label = Above Average) → (New Score = 7.080, Label = High)</li>
+</ul>
+
+<p>These results suggest:</p>
+<ul>
+    <li>Low scores (e.g., 3.49, 3.93) likely indicate countries with lower economic prosperity, freedom levels, or social support.</li>
+    <li>High scores (e.g., 6.97, 6.71) suggest higher life satisfaction among citizens.</li>
+    <li><em>GDP per capita</em> is expected to be higher up to a certain point, but given its relatively small effect on the dependent variable, no major
+        gap is expected between low- and high-scoring countries.</li>
+    <li><em>Freedom to make life choices</em> is expected to be significantly higher in high-scoring countries, as this is the most influential variable.</li>
+</ul>
+
+<p>
+    According to the model’s results, some countries’ happiness levels are lower than expected, potentially due to structural inequalities or lack of social
+    support.  
+    Predicted scores above 6 reflect the positive effects of strong economic indicators and social well‑being.  
+    When considered alongside the RMSE value, prediction errors are not large, indicating the model captures the general trend accurately.
+</p>
+
+<hr>
+
+<h3>📊 2019 Regression Prediction</h3>
+<p>
+    A similar trend to 2018 is observed — overall, scores have generally decreased. However, the changes are not always the same.
+</p>
+
+<ul>
+    <li><strong>United Kingdom</strong> — In 2018, the regression analysis result downgraded the label from <em>High</em> to <em>Above Average</em>, but in
+        2019, both the original and predicted labels remained <em>High</em>.</li>
+</ul>
+
+<p>
+    Happiness label changes do not occur in all cases, but in some countries, they do:
+</p>
+
+<ul>
+    <li><strong>Costa Rica</strong> — As in 2018, the label dropped from <em>High</em> to <em>Above Average</em> in the regression results.</li>
+    <li><strong>Qatar</strong> — As in 2018, the label increased from <em>Above Average</em> to <em>High</em>.</li>
+</ul>
 
     <section>
         <h2>🔍Actual Values and Regression Predicted Values 2018</h2>
@@ -266,7 +291,8 @@ For the 2019 dataset, Robust OLS is the most appropriate choice because:
 - The Breusch–Pagan test confirmed the presence of heteroskedasticity.
 - Due to the presence of outliers, using GB would be risky — and its fit was clearly weaker.
 - Among the remaining models, Robust OLS performs on par without falling behind in accuracy.
-For the 2018 dataset, the Breusch–Pagan test found no heteroskedasticity. However, the Jarque–Bera normality test indicated the presence of outliers and a non‑normal distribution.
+For the 2018 dataset, the Breusch–Pagan test found no heteroskedasticity. However, the Jarque–Bera normality test indicated the presence of outliers and a 
+            non‑normal distribution.
 - Given the outliers and GB’s weaker fit compared to the other models, GB was excluded.
 - Because the data is homoskedastic, Robust OLS is unnecessary.
 - OLS is the most suitable model here due to its simplicity, interpretability, and strong performance.
